2008-12-08  higepon  <higepon@users.sourceforge.jp>

        * CompilerProcedures.cpp (scheme::disasmEx): Added disasm, but it doesn't work yet!

        * VM.cpp (dumpCompiledCode): Added for debug.

        * scripts/gen-insn.scm (print-to-string): Added generation of toSourceString().

        * compiler.scm (pass1/sexp->iform): Fixed wrong tail? flag for cons and values.

2008-12-07  kokosabu  <kokosabu@gmail.com>

        * Symbol.cpp, Symbol.h: Added <eol-style symbol>.

        * EolStyle.h: Added.

2008-12-07  higepon  <higepon@users.sourceforge.jp>

        * library.scm (with-input-from-file): Fixed for multiple values. (thx leque)

        * CompilerProcedures.cpp (scheme::labelEx): Added visited.

        * vm.scm (VM): Fixed the error check of SHIFTJ.

        * compiler.scm (define-pass2/tracable): Added for debug.
                       (pass3/$label): Added visited? check.

2008-12-06  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass2/collect-call): Added an opportunity of varialbe renaming.
                                 (pp-iform): Added code for $RECEIVE node.

2008-12-05  higepon  <higepon@users.sourceforge.jp>

        * Fixed optimization bug. Rewrote pass2/optimize-local-ref, pass2/remove-vars and pass2/$let.

2008-12-04  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm : pass2/$label to pass2/dispatch-table.

        * compiler.scm : Fixed: pass1/asm-1-arg passes wrong "tail?" flag to later process.
                        (pass2/classify-local-ref-call): Fixed for set-count != 0 condition.

2008-12-03  higepon  <higepon@users.sourceforge.jp>

        * Makefile.am: ./mosh => mosh.

        * VM.cpp (VM::run): Added SHIFTJ Instruction.

        * compiler.scm: Fixed the bug of embedded/jump optimization which is across the let boundary.
                        See the comment on pass3/$call.

2008-12-01  higepon  <higepon@users.sourceforge.jp>

        * tail-context => #t when starting compilation.
